--- a/NewKey.ui
+++ b/NewKey.ui
@@ -11,8 +11,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>318</width>
-            <height>237</height>
+            <width>384</width>
+            <height>244</height>
         </rect>
     </property>
     <property stdset="1">
@@ -48,227 +48,6 @@
                     <property stdset="1">
                         <name>name</name>
                         <cstring>TextLabel6</cstring>
-                    </property>
-                    <property stdset="1">
-                        <name>palette</name>
-                        <palette>
-                            <active>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>0</blue>
-                                </color>
-                                <color>
-                                    <red>220</red>
-                                    <green>220</green>
-                                    <blue>220</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                                <color>
-                                    <red>242</red>
-                                    <green>242</green>
-                                    <blue>242</blue>
-                                </color>
-                                <color>
-                                    <red>78</red>
-                                    <green>78</green>
-                                    <blue>78</blue>
-                                </color>
-                                <color>
-                                    <red>183</red>
-                                    <green>183</green>
-                                    <blue>183</blue>
-                                </color>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>0</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>0</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                                <color>
-                                    <red>220</red>
-                                    <green>220</green>
-                                    <blue>220</blue>
-                                </color>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>0</blue>
-                                </color>
-                                <color>
-                                    <red>84</red>
-                                    <green>112</green>
-                                    <blue>152</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                            </active>
-                            <disabled>
-                                <color>
-                                    <red>128</red>
-                                    <green>128</green>
-                                    <blue>128</blue>
-                                </color>
-                                <color>
-                                    <red>220</red>
-                                    <green>220</green>
-                                    <blue>220</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                                <color>
-                                    <red>242</red>
-                                    <green>242</green>
-                                    <blue>242</blue>
-                                </color>
-                                <color>
-                                    <red>78</red>
-                                    <green>78</green>
-                                    <blue>78</blue>
-                                </color>
-                                <color>
-                                    <red>183</red>
-                                    <green>183</green>
-                                    <blue>183</blue>
-                                </color>
-                                <color>
-                                    <red>183</red>
-                                    <green>183</green>
-                                    <blue>183</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>0</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                                <color>
-                                    <red>220</red>
-                                    <green>220</green>
-                                    <blue>220</blue>
-                                </color>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>0</blue>
-                                </color>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>128</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                            </disabled>
-                            <inactive>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>0</blue>
-                                </color>
-                                <color>
-                                    <red>220</red>
-                                    <green>220</green>
-                                    <blue>220</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                                <color>
-                                    <red>242</red>
-                                    <green>242</green>
-                                    <blue>242</blue>
-                                </color>
-                                <color>
-                                    <red>78</red>
-                                    <green>78</green>
-                                    <blue>78</blue>
-                                </color>
-                                <color>
-                                    <red>183</red>
-                                    <green>183</green>
-                                    <blue>183</blue>
-                                </color>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>0</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>0</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                                <color>
-                                    <red>220</red>
-                                    <green>220</green>
-                                    <blue>220</blue>
-                                </color>
-                                <color>
-                                    <red>0</red>
-                                    <green>0</green>
-                                    <blue>0</blue>
-                                </color>
-                                <color>
-                                    <red>84</red>
-                                    <green>112</green>
-                                    <blue>152</blue>
-                                </color>
-                                <color>
-                                    <red>255</red>
-                                    <green>255</green>
-                                    <blue>255</blue>
-                                </color>
-                            </inactive>
-                        </palette>
                     </property>
                     <property stdset="1">
                         <name>font</name>
@@ -446,7 +225,7 @@
             <class>QLayoutWidget</class>
             <property stdset="1">
                 <name>name</name>
-                <cstring>Layout5</cstring>
+                <cstring>Layout28</cstring>
             </property>
             <hbox>
                 <property stdset="1">
@@ -461,11 +240,11 @@
                     <class>QPushButton</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>PushButton1</cstring>
+                        <cstring>PushButton2</cstring>
                     </property>
                     <property stdset="1">
                         <name>text</name>
-                        <string>OK</string>
+                        <string>Cancel</string>
                     </property>
                 </widget>
                 <spacer>
@@ -493,11 +272,11 @@
                     <class>QPushButton</class>
                     <property stdset="1">
                         <name>name</name>
-                        <cstring>PushButton2</cstring>
+                        <cstring>PushButton1</cstring>
                     </property>
                     <property stdset="1">
                         <name>text</name>
-                        <string>Cancel</string>
+                        <string>Create</string>
                     </property>
                 </widget>
             </hbox>
