database transactions implemented exceptionhandling completed

--- a/MainWindow_UI.ui
+++ b/MainWindow_UI.ui
@@ -12,7 +12,7 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>776</width>
+            <width>772</width>
             <height>604</height>
         </rect>
     </property>
@@ -844,12 +844,8 @@
                                     <cstring>PushButton13_2_2_5</cstring>
                                 </property>
                                 <property stdset="1">
-                                    <name>enabled</name>
-                                    <bool>false</bool>
-                                </property>
-                                <property stdset="1">
                                     <name>text</name>
-                                    <string>Import</string>
+                                    <string>C R A S H</string>
                                 </property>
                             </widget>
                             <widget>
@@ -1134,22 +1130,10 @@
         <slot>deleteTemp()</slot>
     </connection>
     <connection>
-        <sender>PushButton25_2_2</sender>
-        <signal>clicked()</signal>
-        <receiver>MainWindow_UI</receiver>
-        <slot>alterTemp()</slot>
-    </connection>
-    <connection>
         <sender>tempList</sender>
         <signal>rightButtonPressed(QListViewItem*,const QPoint&amp;,int)</signal>
         <receiver>MainWindow_UI</receiver>
         <slot>showPopupTemp(QListViewItem *, const QPoint &amp;, int)</slot>
-    </connection>
-    <connection>
-        <sender>tempList</sender>
-        <signal>doubleClicked(QListViewItem*)</signal>
-        <receiver>MainWindow_UI</receiver>
-        <slot>alterTemp()</slot>
     </connection>
     <connection>
         <sender>PushButton13_2_2</sender>
@@ -1175,7 +1159,13 @@
         <receiver>MainWindow_UI</receiver>
         <slot>newSerTemp()</slot>
     </connection>
-    <slot access="public">alterTemp()</slot>
+    <connection>
+        <sender>PushButton13_2_2_5</sender>
+        <signal>clicked()</signal>
+        <receiver>MainWindow_UI</receiver>
+        <slot>crashApp()</slot>
+    </connection>
+    <slot access="public">crashApp()</slot>
     <slot access="public">deleteCert()</slot>
     <slot access="public">deleteKey()</slot>
     <slot access="public">deleteReq()</slot>
