--- a/KeyDetail.ui
+++ b/KeyDetail.ui
@@ -11,8 +11,8 @@
         <rect>
             <x>0</x>
             <y>0</y>
-            <width>558</width>
-            <height>387</height>
+            <width>600</width>
+            <height>447</height>
         </rect>
     </property>
     <property stdset="1">
@@ -557,14 +557,25 @@
             </property>
         </widget>
         <widget>
-            <class>QMultiLineEdit</class>
+            <class>QLabel</class>
             <property stdset="1">
                 <name>name</name>
                 <cstring>keyModulus</cstring>
             </property>
             <property stdset="1">
-                <name>wrapPolicy</name>
-                <enum>Anywhere</enum>
+                <name>frameShape</name>
+                <enum>Panel</enum>
+            </property>
+            <property stdset="1">
+                <name>frameShadow</name>
+                <enum>Sunken</enum>
+            </property>
+            <property stdset="1">
+                <name>alignment</name>
+                <set>WordBreak|AlignVCenter|AlignLeft</set>
+            </property>
+            <property>
+                <name>wordwrap</name>
             </property>
         </widget>
         <widget>
